# ARCS

./: .gitignore  ARCS_Core_Specification.md  CMakeLists.txt  README.md  arcs.yaml.example  cmakeLists.txt
app/: CMakeLists.txt  cmakeLists.txt  main.cpp
config/: arcs.yaml.example
config/prompts/: default_adapter_prompt.txt
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GOVERNANCE.md  MVP_FLOW.md  SCHEMA_CONTRACT.md  SCHEMA_GATE_PLAN.md  SPECIFICATION.md  STATE.md  TEST_MATRIX.md  docs_update.md
schemas/v1/: action.report_emit.schema.json  approval.schema.json  artifact_base.schema.json  event.schema.json  execution_result.schema.json  input.schema.json  interpretation_proposal.schema.json  option.schema.json  permission_grant.schema.json  policy.schema.json  task.schema.json  verification_report.schema.json
src/adapters/: CMakeLists.txt
src/adapters/input/: CMakeLists.txt
src/adapters/input/include/input/: input_adapter.hpp
src/adapters/input/src/: input_adapter.cpp
src/adapters/interpretation/: CMakeLists.txt
src/adapters/interpretation/include/interpretation/: api.hpp  api_interpreter.hpp  config.hpp  input_interpreter.hpp  interpretation_proposal.hpp  interpretation_to_task_mapper.hpp  request.hpp  response.hpp  rule_based_interpreter.hpp  worker_client.hpp
src/adapters/interpretation/src/: api_interpreter.cpp  interpretation_api.cpp  interpretation_to_task_mapper.cpp  rule_based_interpreter.cpp  worker_client.cpp
src/adapters/nlu/: CMakeLists.txt
src/adapters/nlu/include/nlu/: model_nlu_parser.hpp  nlu_parser.hpp  nlu_result.hpp  nlu_to_task_mapper.hpp  rule_based_nlu_parser.hpp
src/adapters/nlu/src/: nlu_to_task_mapper.cpp  rule_based_nlu_parser.cpp
src/approval/: CMakeLists.txt
src/approval/include/: approval.hpp
src/approval/src/: approval_gate.cpp
src/artifact/: CMakeLists.txt
src/artifact/include/artifact/: actor.hpp  artifact.hpp  factory.hpp  ids.hpp  json.hpp  provenance.hpp  source.hpp  trust.hpp
src/artifact/src/: factory.cpp  ids.cpp  json.cpp
src/core/: CMakeLists.txt
src/core/include/core/: flow.hpp  system_logger.hpp
src/core/src/: flow.cpp
src/event/: CMakeLists.txt
src/event/include/event/: event.hpp  json.hpp
src/event/src/: json.cpp
src/execution/: CMakeLists.txt
src/execution/include/: idempotency.hpp  materializer.hpp  revocation_check.hpp  step.hpp
src/execution/include/arcs/: action.hpp  execution_result.hpp  executor.hpp
src/execution/include/execution/: action.hpp  adapter_executor.hpp  adapter_registry.hpp  cli_output_adapter.hpp  execution_adapter.hpp  execution_result.hpp  executor.hpp  idempotency.hpp  policy_update_executor.hpp  report_emit_executor.hpp  revocation_check.hpp
src/execution/src/: action_materializer.cpp  adapter_executor.cpp  adapter_registry.cpp  cli_output_adapter.cpp  emit_report_step.cpp  final_guards.cpp  idempotency_store.cpp  policy_update_executor.cpp  report_emit_executor.cpp  revocation_check.cpp
src/ingress/: CMakeLists.txt
src/ingress/include/ingress/: cli_ingress_source.hpp  ingress_normalizer.hpp  ingress_router.hpp  ingress_source.hpp  ingress_validator.hpp  quarantine.hpp
src/ingress/src/: ingress_normalizer.cpp  ingress_router.cpp  ingress_validator.cpp  quarantine.cpp
src/policy/: CMakeLists.txt
src/policy/include/policy/: permission_grant.hpp  policy.hpp
src/policy/src/: permission_grant.cpp  policy_artifact.cpp
src/reducer/: CMakeLists.txt
src/reducer/include/reducer/: approval_state.hpp  approval_state_reducer.hpp  effective_permissions.hpp  mock_time_source.hpp  permission_reducer.hpp  reducer.hpp  task_state.hpp  task_state_reducer.hpp  time_source.hpp
src/reducer/src/: approval_state_reducer.cpp  mock_time_source.cpp  permission_reducer.cpp  task_state_reducer.cpp
src/schema/: CMakeLists.txt  cmakeLists.txt
src/schema/include/schema/: schema_loader.hpp  schema_registry.hpp  schema_types.hpp  validation_result.hpp  validator.hpp
src/schema/src/: schema_loader.cpp  schema_registry.cpp  validator.cpp
src/store/: CMakeLists.txt
src/store/include/store/: commit.hpp  head_tracker.hpp  optimistic_lock.hpp  store.hpp  store_memory.hpp  store_sqlite.hpp
src/store/src/: head_tracker.cpp  optimistic_lock.cpp  store_memory.cpp  store_sqlite.cpp
src/verification/: CMakeLists.txt
src/verification/include/verification/: authority_verifier.hpp  verifier.hpp
src/verification/src/: approval_verifier.cpp  authority_verifier.cpp  permission_verifier.cpp  reference_integrity_verifier.cpp  schema_verifier.cpp  scope_verifier.cpp  verification_engine.cpp
tests/: CMakeLists.txt  phase1_tests.cpp  test_adapter_registry.cpp  test_approval.cpp  test_approval_state_reducer.cpp  test_artifact_factory.cpp  test_authority_verifier.cpp  test_cli_adapters.cpp  test_happy_path.cpp  test_id_generator.cpp  test_idempotency.cpp  test_input_artifact.cpp  test_interpretation.cpp  test_llm_isolation.cpp  test_materializer.cpp  test_permission_ttl.cpp  test_policy_change_control.cpp  test_policy_drift.cpp  test_replay.cpp  test_revocation.cpp  test_schema_registry.cpp  test_store_conformance.cpp  test_store_memory.cpp  test_store_sqlite.cpp  test_task_state_reducer.cpp  test_text_flow.cpp  test_unknown_blocks.cpp  test_verification_engine.cpp
tools/: __init__.py  requirements.txt
tools/interpretation_worker/: __init__.py  main.py  parser_client.py
tools/interpretation_worker/tests/: test_full_stack_e2e.py  test_parser_bridge.py
